tests/bind/good/fun-with-arg.py
def fun(x, y):
    return x + y

x = 7
y = x + 1

fun(x, y)
