tests/bind/bad/nasty-break.py
def fun():
    break

while 1:
    fun()
